--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3774,3 +3774,12 @@ margin: 0 3px;
 box-shadow: 1px 1px 0 #999;
 }
 
+#main #img{
+  text-align: center;
+}
+
+.center-image
+{
+    margin: 0 auto;
+    display: block;
+}
